Alpha: release control panel for testing. Added socket back for analytics / broadcasts. Various  fixes to custom chat colors

--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -119,6 +119,7 @@
     "info": {
         "header": "User Information",
         "name": "Name",
+        "profile": "User Profile",
         "title": "Title",
         "specialTitles": {
             "developer": "plug&#179; Developer",
